Rearranges front page

--- a/index.html
+++ b/index.html
@@ -99,12 +99,37 @@
             </div>
           </div>
         </div>
-        <div class="row projects-row">
-          <div class="col text-center">
-            <a class="projects-link" href="./projects.html"
-              >projects / certs
-              <i class="fa fa-arrow-right iLikeToMoveIt" aria-hidden="true"></i>
-            </a>
+        <div class="social-row">
+          <div class="col">
+            <div class="row">
+              <div class="col text-center">
+                <a href="https://twitter.com/_davedev" target="_blank">
+                  <i
+                    class="fab fa-twitter contactIcon"
+                    style="font-size: 25px"
+                  ></i>
+                </a>
+              </div>
+              <div class="col text-center">
+                <a href="https://github.com/ddumas551" target="_blank">
+                  <i
+                    class="fab fa-github contactIcon"
+                    style="font-size: 25px"
+                  ></i>
+                </a>
+              </div>
+              <div class="col text-center">
+                <a
+                  href="https://www.linkedin.com/in/daviddumas551/"
+                  target="_blank"
+                >
+                  <i
+                    class="fab fa-linkedin contactIcon"
+                    style="font-size: 25px"
+                  ></i>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
         <div class="row justify-content-center contact-row">
@@ -155,33 +180,15 @@
         Might want more or more Plum Sake. I'd definitely recommend you make it
         several times to figure out your own flavor. -->
       </div>
-      <div class="row justify-content-center social-row">
+      <div class="row justify-content-center projects-row">
         <div class="col-8">
           <div class="row">
             <div class="col text-center">
-              <a href="https://twitter.com/_davedev" target="_blank">
+              <a class="projects-link" href="./projects.html"
+                >projects / certs
                 <i
-                  class="fab fa-twitter contactIcon"
-                  style="font-size: 25px"
-                ></i>
-              </a>
-            </div>
-            <div class="col text-center">
-              <a href="https://github.com/ddumas551" target="_blank">
-                <i
-                  class="fab fa-github contactIcon"
-                  style="font-size: 25px"
-                ></i>
-              </a>
-            </div>
-            <div class="col text-center">
-              <a
-                href="https://www.linkedin.com/in/daviddumas551/"
-                target="_blank"
-              >
-                <i
-                  class="fab fa-linkedin contactIcon"
-                  style="font-size: 25px"
+                  class="fa fa-arrow-right iLikeToMoveIt"
+                  aria-hidden="true"
                 ></i>
               </a>
             </div>
