--- a/projects.html
+++ b/projects.html
@@ -112,11 +112,12 @@
           <div class="col text-center projects-page-title">Certificates</div>
         </div>
         <div class="row align-items-center text-center certificates">
+          <div class="col-12 col-sm-4 cert-desc">
+            Full Stack Web Development
+            <div class="year">2019</div>
+          </div>
           <div class="col-12 col-sm-4 cert-title">
             University California Berkeley Ext.
-          </div>
-          <div class="col-12 col-sm-4 cert-desc">
-            Full Stack Web Development | 2019
           </div>
           <div class="col-12 col-sm-4 cert-material">
             HTML5, CSS3, JavaSript ES2015, jQuery, React 16+ django, mongoDB,
@@ -124,22 +125,24 @@
           </div>
         </div>
         <div class="row align-items-center text-center certificates">
-          <div class="col-12 col-sm-4 cert-title">Udemy | Colt Steele</div>
           <div class="col-12 col-sm-4 cert-desc">
-            Modern React Bootcamp | 2020
+            Modern React Bootcamp
+            <div class="year">2020</div>
           </div>
+          <div class="col-12 col-sm-4 cert-title">Udemy | Colt Steele</div>
           <div class="col-12 col-sm-4 cert-material">
             Hooks, Context, Router, NextJS, JS Styling, Semantic UI
           </div>
         </div>
         <div class="row align-items-center text-center certificates">
-          <div class="col-12 col-sm-4 cert-title">Udemy | Colt Steele</div>
           <div class="col-12 col-sm-4 cert-desc">
-            Data Structures and Algorithms | 2021
+            Data Structures and Algorithms
+            <div class="year">2021</div>
           </div>
+          <div class="col-12 col-sm-4 cert-title">Udemy | Colt Steele</div>
           <div class="col-12 col-sm-4 cert-material">
-            Big O notation, Recursion, Searching/Sorting algorithms, Data Structures, Intro to Dynamic
-            Programming
+            Big O notation, Recursion, Searching/Sorting algorithms, Data
+            Structures, Intro to Dynamic Programming
           </div>
         </div>
       </div>
