--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
             <div class="project-title">Cistercian Symbols</div>
             <a
               class="project-link"
-              href="focused-bartik-9cafdf.netlify.app"
+              href="https://focused-bartik-9cafdf.netlify.app"
               target="_blank"
             >
               <img
