Fixes off center div, adds updated resume

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="col-8">
             <div class="row justify-content-center">
               <div class="col-12 col-lg-4 intro1">
-                <a href="./src/Photos/resume18_4_20.pdf" download>
+                <a href="./src/Photos/NHResume.pdf" download>
                   <p class="text-center contact-button">
                     <i class="fa fa-paperclip" aria-hidden="true"></i>
                     Resume
