--- a/projects.html
+++ b/projects.html
@@ -73,12 +73,12 @@
               <img
                 class="project-image"
                 src="/src/Photos/SimpleTurtle.png"
-                alt="Cistercian Numerals"
+                alt="Simple Turtle"
               />
             </a>
             <div class="project-description">Built in React using Hooks</div>
             <a
-              href="https://github.com/DDumas551/CistercianNums"
+              href="https://github.com/DDumas551/SimpleTurtle"
               class="project-link"
               target="_blank"
               >View the code</a
@@ -94,7 +94,7 @@
               <img
                 class="project-image"
                 src="/src/Photos/DS.jpg"
-                alt="Cistercian Numerals"
+                alt="Dissolved Solids"
               />
             </p>
             <div class="project-description text-center">
